@@ -27,6 +27,7 @@ prop.sotimeout=SOCKETTIMEOUT
 prop.ssl=SSL
 prop.tcpnodelay=TCPNODELAY
 prop.tds=TDS
+prop.bufferdir=BUFFERDIR
 prop.usecursors=USECURSORS
 prop.usejcifs=USEJCIFS
 prop.uselobs=USELOBS
@@ -65,6 +66,7 @@ prop.desc.sotimeout=The TCP/IP socket timeout value in seconds or 0 for no timeo
 prop.desc.ssl=Set the SSL level.
 prop.desc.tcpnodelay=Enable/disable TCP_NODELAY
 prop.desc.tds=The database server protocol.
+prop.desc.bufferdir=The directory to buffer data to.
 prop.desc.usecursors=Use SQL Server fast forward only result sets for forward only result sets.
 prop.desc.usejcifs=Force use of jCIFS library on Windows for connecting via named pipes.
 prop.desc.uselobs=Map large types (IMAGE and TEXT/NTEXT) to LOBs vs. String/byte[].
